# brain_storm-idea

./: Dockerfile  README.md  pyproject.toml  run_api.py
.github/workflows/: deploy_image.yml  test_and_deploy_image.yml  test_python.yml
server/: idea_api.py
server/tests/: test_idea_api.py
