[tool.poetry]
name = "idea"
version = "0.1.0"
description = ""
authors = ["Akiva Zonenfeld <akivazo1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cherrypy = "^18.10.0"
pymongo = "^4.9.1"
mongomock = "^4.2.0.post1"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
pytest = "^8.3.3"
requests = "^2.32.3"
flask = "^3.0.3"
waitress = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
